Finished Focus Localisation America

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -714,7 +714,8 @@ PB_AME_The_Big_Poverty_Fund_desc:0 "How can we expect the Freedmen ever to get o
 PB_AME_The_Dixie_Infrastructure:0 "Dixie Infrastructure Plan"
 PB_AME_The_Dixie_Infrastructure_desc:0 "We need Dixies Political, Social and Military Support in the conflicts to come. This requires changes to some of the existing political systems which have benefitted the South in the last decades. However everyone has a price. And we have enough capital to pay. The Dixie Infrastructure Refurbish Bill will satisfy the Southern Clique ambitions and open new oppurtunities for us."
 PB_AME_Seperate_But_Equal:0 "Seperate, but Equal Provinces"
-PB_AME_Seperate_But_Equal_desc:0 ""
+PB_AME_Seperate_But_Equal_desc:0 "As tension has grown in the Dixie heartland of America, racial relations have come to the foreground of political debate in Philly. Serious solutions have been proposed and after long of bickering a middle ground has been found to somewhat appease both Dixie and Freemen. Thus, a kind of compromise has been drafted in the form of a state representative diet for the Southern provinces, representating the white and black population of the area in a two parliaments through state representation. Some have criticized the project for its weakining white Dixie, while others are disappointed that Freemen in the Dixie states will be forced to leave for the Freemen states if they want true liberty."
+PB_AME_Establish_the_Black_Republics:0 "Establish Home Republics"
 PB_AME_Race_Representation_Councils:0 "Imagining a Racial Diet"
 PB_AME_Race_Representation_Councils_desc:0 "As tension has grown in the Dixie heartland of America, racial relations have come to the foreground of political debate in Philly. Serious solutions have been proposed, but they alternate from far too radical and revolutionary to clear white supremacist, Dixie appeasement. Thus, a kind of compromise has been drafted in the form of a race representative diet for the southern provinces, representating the white and black population of the area in a single parliament through a representative method. Some have criticized the project for its potential to empower white Dixie, while others have applauded the effort to repair race relations."
 PB_AME_Establish_the_Black_Republics:0 "Establish Home Republics"
@@ -793,15 +794,15 @@ PB_AME_Black_Steel_desc:0 "Other nations in the world might produce more oil the
 PB_AME_Automat_Quota:0 "The Automation Quota"
 PB_AME_Automat_Quota_desc:0 "One of biggest election promises of the Progress Party under Curtin was the implemtation of an Automation Quota in the workspace. The Quota will restrict the amount of Automatics to a certain percentages of workers in the workspace making cases of mass layoffs due to new advanced automatics harder. Though the planning has experienced some hiccups as several expections regarding different states, companies or activities had to be made. Especially the EIEC has been trying to prevent the passing of the Quota."
 PB_AME_Medical_Facilites:0 "Modern Medical Facilities"
-PB_AME_Medical_Facilites_desc:0 ""
+PB_AME_Medical_Facilites_desc:0 "The Smog of the Great Cities is destroying more and more lives of the innocent. The dangerous sociogenetic experiments leave several misguided people disfigured. Untested and unsafe Augmentations cause painful infections and ruin the bodies of the unlucky ones. So many ways people get hurt in this fast developing world and there is not enough medical help thats supports recovery. Escpecially advanced medical help."
 PB_AME_Midwest_Project:0 "New England Development Project"
-PB_AME_Midwest_Project_desc:0 ""
+PB_AME_Midwest_Project_desc:0 "New England is the core of our American Nation. The states in the North East offer the best of what the country has to offer. Gorgoues metropolis riddled with maginificient sites. The seats of all the most powerful Megacorporations. Investing here is particurly easy with several companies eager to increase their networks to the new technological systems."
 PB_AME_HardSuit_Factories:0 "The Hardsuit Factory Ground Appalia"
-PB_AME_HardSuit_Factories_desc:0 ""
+PB_AME_HardSuit_Factories_desc:0 "A new secret factory site inside the Appalachian Mountains is in planning. This site will focus on the development and production of Hardsuit Armors. A necassary investment for the military and industry."
 PB_AME_Florida_Native_Protection:0 "Protect Seminole Status"
-PB_AME_Florida_Native_Protection_desc:0 ""
+PB_AME_Florida_Native_Protection_desc:0 "There are several forces in the political movements who despise the privileges the Seminole natives gained in the past and have maintained until this day. We can not know how future parties in power and even our own party in the far future will handle them. But we can already protect them from this uncertain future. Curtin has moved forward to enshrine the protected status of the Seminole People in the Constitution. This will make further discriminations far harder in the future."
 PB_AME_Economic_Obligation_Plan:0 "The WEMP-Obligation Clause"
-PB_AME_Economic_Obligation_Plan_desc:0 ""
+PB_AME_Economic_Obligation_Plan_desc:0 "A new economic project aiming on increasing production efficiency across the EIEC industrial complex. The better the factories of the EIEC run, the greater the profits. Greater profits lead to economic stabilization."
 PB_AME_Fair_Pensions:0 "Increase Pensions"
 PB_AME_Fair_Pensions_desc:0 "With the funds from the Mega-Corps tax we can pursue social programs, we could not imagine before. To gain support from the aging consertative block and workers laborers we will increase the pensions by a good amount."
 PB_AME_Fair_Education_Act:0 "Fair Education Act"
@@ -912,17 +913,22 @@ PB_AME_Sign_the_Black_Budget_desc:0 "The Bureau of Technology and Science can be
 PB_AME_Form_the_Trinity_Committee:0 "Form the Trinity Committee" 
 PB_AME_Form_the_Trinity_Committee_desc:0 "The Workman's Party has allowed the Bureau of Technology and Science to establish a committee to explore the potential applications of atomic energy. This committee, known as the Trinity Committee, has been given the resources and authority to conduct research and experiments in the field of atomic energy. Behind closed doors, however, the true intent of the committee is to develop methods and systems for eventual atomic weaponry."
 PB_AME_No_War_Against_the_South:0 "The Southern Gambit"
+PB_AME_No_War_Against_the_South_desc:0 "During the election campaign we promised half-heartily that we would deal with the Dixie problems in the south to gain votes in the election. We won the election but our promise is coming back to bite us in the ass. More and more of Freemen, equality libertarians in the North are getting angry that we are still not getting involved with this matter. Hell even our own party base is demanding action. If we will not do something this might cost us next election.\n\nHowever the higher ups in the party want to take a slow approach. The Dixie Issue is a powder keg and we will be careful and use every tool we have to make sure it does not blow up in our face."
 
 PB_AME_Paved_Seduction:0 "Paved Roads in the South - For Free!"
+PB_AME_Paved_Seduction_desc:0 "One of the many prejudices the South faces from the North is being called backwards and not being able to build up their own states. Meanwhile Southerners believe that the rich North gives them nothing and continues to bath in gold. Despite being expensive we are thinking of new infrastructure development plan for the South which might fix this in the short run. We started improving the road infrastcure in the rural south beginning large pavement modernizations. And all of this while saying that this is purely financed by Northern money, not one Southern Dollar."
 
 PB_AME_Flexible_Stateman:0 "A Speech a day keeps the Dixie away"
 PB_AME_Flexible_Stateman_desc:0 "A Good Speech changes everything.\nPeople forgot all kinds of misgivings or problems from before and focus on new things if you just how to use the right words. Never let them catch you with your true intentions. Use jokes, glorifications and promises to play ball as long as you have to."
 
 PB_AME_The_Corrupt_Scheme:0 "A Favor for a Favor"
+PB_AME_The_Corrupt_Scheme_desc:0 "Politicians are pragmatic people. They might fire up the people for support and sprew the same propaganda about Southern Mistreatment. But when it will come down to chaos and civil war they will not be so eager to remain on the side of a doomed rebellion. The only need good excuses to back out. Good insurances that they can remain where they are and work in a better way. In this moment - bribery is a necassary evil."
 
 PB_AME_Our_Carrots:0 "Danglin Our Carrots"
+PB_AME_Our_Carrots_desc:0 "There are many more things we can give the South. Modernizing their cities. Building industry. Creating the best Entertainment only for them. Everything they want just so they can forget about their old other issues they had."
 
 PB_AME_Ending_Crittenden_Lang:0 "Ending Crittenden"
+PB_AME_Ending_Crittenden_Lang_desc:0 "The Dixie Threat is at an end. Its political movements are dead and buried. The South is stabilized and will now remain loyal. With this accomplished we can carry out the reforms our voting base demands. The Crittenden Deal will finally be rewritten, removing the exclaves of segregation in the South. The exemptions for Dixie Men will be removed. The nation is finally whole."
 
 PB_AME_Alternative_for_Social_America:0 "The Alternative for Social America"
 PB_AME_Alternative_for_Social_America_desc:0 "The Social Credit party wins the election, gaining a majority of seats in the legislative body. The election results are met with excitement and celebration among party supporters, as well as concern and criticism from opponents. The newly elected officials begin their term with promises to implement their platform of economic and social reform, and work to fulfill their campaign promises."
