Updating all the Loc + Loc Sheet Updated

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -598,7 +598,7 @@ crow_desc: ""
 assiniboine_desc: ""
 cree_desc: "" 
 borealian_desc: "Borealians are Anglo descendants that colonized the North-West parts of the America Hinterlands. The most northern of these settlements are sparsely populated but the state of British Columbia houses a good majority of Borealians in conditions that can be considered hospitable compared to the Great North.\n\nBorealians are typically very progressive and diversive with a large native Amerindian population. The Maple Leaf has become a national icon to represent the Borealian people and Ice Hockey is the countries most participated sport." 
-alaskan_desc: "" 
+alaskan_desc: "A true chimera, the Alaskan identity was formed by the cross-polinization of Russian immigration, native First Peoples, and Western Americans. Though formed upon a Russian pillar, the imperial grip upon Alaska has always been lax, allowing cultural innovation to flourish. The deportation of various Russian minorities to the Alaskan wilderness injected a fresh supply of ideas. Komi rub shoulders with Buryats, who in turn find themselves wokring alongside Tlingits and Haida. Perhaps it was the hope of St. Petersburg that this diversity would breed disunity amidst the exiles, but the opposite proved to be true. Exposure to many different traditions and customs has resulted in a more liberal, open-minded populace. The Alaskan experiment of limited democracy has borne fruit, with the unique peoples of Russian America contributing to its makeup. Without the overbearing weight of the tsar, Alaska is truly coming into its own identity." 
 american_desc: "" 
 
 # CARRIBEAN #
