--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -655,10 +655,10 @@
   ImpManagement_QUE_30_tt:0 "[QUE.GetFlag]Quebecian Alignment is less then §r30%§!"
 
 
-  Anglois_Crisis.33.t:0 "United Commenwealth offers bailout"
-  Anglois_Crisis.33.d:0 ""
-  Anglois_Crisis.33.a:0 "We are a slut for that cold hard cheddar"
-  Anglois_Crisis.33.b:0 "Quebec will survive alone"
+  Anglois_Crisis.33.t:0 "Suits from Philly"
+  Anglois_Crisis.33.d:0 "“We’ll make this quick and simple,” the Brooklyn accent marched across the crooked oak table. Our Foreign Minister and the gang of American diplomats were at an elegant cafe in the upper deck of Ottawa, negotiating mediation after recent escalations in the Angloi Crisis. “Philadelphia is offering a Samaritan effort to bail Quebec from its devastating economic situation. Such an effort would directly strengthen the Empire's presence in North America, directly boosting you Quebecois. In exchange, we request a facile concession on our autonomy in the Angloi states.” A young waitress delivered the men their overpriced entrees. Pushing words through his sirloin-stuffed teeth, the American coughed “Recognize our righteousness in the Midwest, and we’ll excavate Quebec from its economic burden.” \n\nThe Foreign Minister pondered about the compromise as he observed the cloudy Ottowa skies below. Rejecting the deal would certainly keep Quebec rotting in its financial entanglement, only diminishing the legitimacy and power of the commonwealth. It would deeply anger the United Commonwealths, perhaps strengthening the imperial tension between Britain and her colony. However, granting the notion would provide the Americans more wriggle room to sway Commonwealth unity and displace Britain from its hegemonic power. In the case of an imperial divide, the industrial parks of Chicagou and Detroit would then be in the ownership of America, only further stripping away the power of Quebec."
+  Anglois_Crisis.33.a:0 "“You have a deal, chaps.”"
+  Anglois_Crisis.33.b:0 "... abandoning the Americans with the food, the proposal, and the exorbitant bill."
 
   Anglois_Crisis.34.t:0 "Quebec accepts Bailout Opportunity"
   Anglois_Crisis.34.d:0 ""
