Made Serbia Dumb

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -665,5 +665,5 @@
   Anglois_Crisis.34.a:0 "Sluts for that cold hard green cheddar"
 
   Anglois_Crisis.35.t:0 "Quebec refuses Bailout Opportunity"
-  Anglois_Crisis.35.d:0 "c"
+  Anglois_Crisis.35.d:0 ""
   Anglois_Crisis.35.a:0 "Idiotic Fools"
