Finishing Up the Winter War

--- a/localisation/english/PB_Finland_l_english.yml
+++ b/localisation/english/PB_Finland_l_english.yml
@@ -75,6 +75,14 @@
    ##########################
   # EVENTS
 
+  ffinland.8.t:0 "The Swedish deliver more industrial support"
+  ffinland.8.d:0 ""
+  ffinland.8.a:0 "Every bit helps."
+
+  ffinland.9.t:0 "The Free Finish ask for more support"
+  ffinland.9.d:0 ""
+  ffinland.9.a:0 "This is all we can spare"
+
   ffinland.10.t:0 "The Free Finnish Ask for Support"
   ffinland.10.d:0 "A delegation by the Free Finnish Resistance has arrived in Frankfurt petitioning for support in their war of indepedence against Russia.\n\nThe German Government remains firm on their decision to not militarily support the nationalistic rebellions in East. However the German People are very sympathetic towards the struggles of the Finnish people and many call to atleast send minimal support to the Fins.\n\nThe government is now debating to send classified humanitarian aid to the North. The support package would improve the Finnish infrastructure, contain logistical support and 5000 helmets. The package would not be a drag on the German nation and be an easy way to support in a small but meaningful way."
   ffinland.10.a:0 "We can maybe help them a little"
@@ -100,6 +108,22 @@
   ffinland.15.t:0 "French send Help"
   ffinland.15.d:0 ""
   ffinland.15.a:0 "Thank you, one last time"
+
+  ffinland.16.t:0 "The Free Finish Ask For Support"
+  ffinland.16.d:0 ""
+  ffinland.16.a:0 "We stand with out Northern Brothers"
+
+  ffinland.17.t:0 "Denmark-Norway sends Planes and Trains!"
+  ffinland.17.d:0 ""
+  ffinland.17.a:0 "We will never forget this!"
+
+  ffinland.18.t:0 "The Free Finish Ask for Support"
+  ffinland.18.d:0 "The Free Finish Rebellion has send representatives to the House of Commons and where allowed to make a speech there detailing their plight. They met resounding public support and several politicians promised to help however they can.\nThe Government however maintains the strong stance that supporting the small rebellion in Finland will not benefit us in any way. The only thing this will cause is further escalation with Russia. For now we will remain neutral."
+  ffinland.18.a:0 "Russia has not crossed enough red lines."
+
+  ffinland.19.t:0 "The British promise support but send nothing..."
+  ffinland.19.d:0 ""
+  ffinland.19.a:0 "The Great Defenders of Decency..."
 
   ffinland.cap.1.t:0 "Liberation of Oulu"
   ffinland.cap.1.d:0 "After a hard fought battle between us and the Russian forces, we were able to capture the stragecially important harbour city of Oulu. With this victory in our hands we may soon capture the rest of our occupied lands."
@@ -157,6 +181,8 @@
   PB_FIN_Unpopular_Administration_desc:0 "The intrusion of Russian affairs into Finland hasn't been met with positive reception. Whilst not unique to Finland as all Russia's autonomies wish for the bear to let go in Finlands case the situation is arguably worse due to the continued partisan campaign by the Free Finnish Army. The people know that there is hope for independence and it is because of this that they will do everything in their power to fight Moscow. Though there is a clear remedy to this issue, end the Finnish partisan threat and the people will in time loose hope."
   PB_FIN_Scandinavian_Support:0 "Scandinavian Support"
   PB_FIN_Scandinavian_Support_desc:0 "The military support the Free Finnish Army recieves from Sweden is vital to their secessionist cause. In fact almost all Finnish weapons are of Swedish origin with only a hand full of weapons being produced locally, if funding was to be some how cut then Finland as a concept would die within a heart beat. Sweden and the rest of Scandanavia provide Finland with military know-how in the form of secret attaches, of course the Scandanavian nations are mostly sending military proffesionals in the hopes of improving their own army, and not out of the goodness of their hearts. Although all can agree it would be better if Russia wasn't knocking on their doorstep."
+  PB_FIN_Scandinavian_Support_1:0 "Scandinavian Support"
+  PB_FIN_Scandinavian_Support_1_desc:0 "The military support the Free Finnish Army recieves from Sweden is vital to their secessionist cause. In fact almost all Finnish weapons are of Swedish origin with only a hand full of weapons being produced locally, if funding was to be some how cut then Finland as a concept would die within a heart beat. Sweden and the rest of Scandanavia provide Finland with military know-how in the form of secret attaches, of course the Scandanavian nations are mostly sending military proffesionals in the hopes of improving their own army, and not out of the goodness of their hearts. Although all can agree it would be better if Russia wasn't knocking on their doorstep."
   PB_FIN_Winter_War:0 "The Winter War"
   PB_FIN_Winter_War_desc:0 "The Finnish revolt of 1931 has been a thorn in Russia's administrative efforts in controlling the region, officially governed by the Russian Empire in reality the northern regions are effectively under the command of rag-tag Finnish seperatists. That and their continued support from Scandanavian nations, namely Sweden, has pro-longed this 'winter' guerilla campaign longer than expected. Tank combat is rendered effectively useless because of Finlands terrain with Russian tactics now boiling down to 'send as many men as we can' to drive the Free Finnish Army out. With already 5,000 Russian deaths compared to a measly 300 Finnish deaths the demands for peace become louder in Moscow."
 
