--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1412,6 +1412,8 @@
  VICTORY_POINTS_13276:0 "Manti"
  VICTORY_POINTS_12134:0 "New Jordan"
  VICTORY_POINTS_7721:0 "Brigham"
+ VICTORY_POINTS_13319:0 "John Day"
+ VICTORY_POINTS_13292:0 "Alturas"
  VICTORY_POINTS_11698:0 "Humility"
  VICTORY_POINTS_505:0 "Gangkou"
  VICTORY_POINTS_11495:0 "Hóngyè"
