Abandon Tyranny 80% Finished

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -215,6 +215,14 @@
   ImpCiv_Crisis.152.d:0 "."
   ImpCiv_Crisis.152.a:0 "They dont care about us. Why should we?."
 
+  ImpCiv_Crisis.153.t:0 "Whispers of Conspiracy"
+  ImpCiv_Crisis.153.d:0 "."
+  ImpCiv_Crisis.153.a:0 "Something is brewing..."
+
+  ImpCiv_Crisis.154.t:0 "The Loyalist Purge"
+  ImpCiv_Crisis.154.d:0 "."
+  ImpCiv_Crisis.154.a:0 "And there are still so many left..."
+
   ImpCiv_Crisis.16.t:0 "The Last Minutes Of Peace"
   ImpCiv_Crisis.16.d:0 "Flashpoints continue to spark throughout the empire. This evening, British and American forces in New England faced off and came away more confused than anything. Our report states that British troops were spotted outside Epping, an area near the rebelling New England provinces. Due to being directly marked as British soldiery, they were approached with caution. Despite this caution, a firefight ensued which left at least one dead from our side and possibly three to four on theirs, depending on who's being asked.\n\nRadio contact between British and American forces in the region has ceased entirely since then. Either the British have changed their codes or they're simply not interested in chit chat now. It's made it impossible to prevent conflict in the region, as no one is making any effort to coordinate. Shootouts are already being reported across the entire border, with both sides seemingly taking random pot shots at one another."
   ImpCiv_Crisis.16.a:0 "Who Shot First?"
@@ -234,6 +242,17 @@
   ImpCiv_Crisis.20.t:0 "We Are Victorious" 
   ImpCiv_Crisis.20.d:0 "Today the American people and nation stand as one united whole, free from the yoke of London and her fading empire. Millions across the Coalition of Independent States rejoice as Britain has agreed to a ceasefire following months of brutal conflict that has taken the lives of many. While the specifics of the peace deal are being worked on by both sides, we can safely say that the end of war is now upon us. What the future now holds for our young nation is yet to be determined but our trial by fire is finally over. "
   ImpCiv_Crisis.20.a:0 "Land of the free, home of the brave"
+
+  ImpCiv_Crisis.21.t:0 "The Ultimatum" 
+  ImpCiv_Crisis.21.d:0 "At approximately noon today, an empire wide ultimatum was broadcasted by the Prime Minister of the United Commonwealth, addressing her majesty directly.\n\n“I speak today in the name of stability, longevity, and peace, your majesty. It has grown clear that Britain is an unfit home for you. An unfit center for the glorious empire in which we live. It is a unanimous agreement among the United Commonwealth and its constituents that the royal family should move its base of operations to   Philadelphia, far, far away from any threats in Europe and the filth which plagues the home isles. A new royal   palace in which Your Majesty shall reside is being constructed, one that, once finished, shall put Buckingham to   shame. Should the weak, greedy government in Westminster attempt to withhold the Your Majesty from exiting to   the empire's rightful center, we and our constituents will not be afraid to use force and shall bring our troops   into London itself if we must. Informally speaking, we are already the center of the empire after all, and you   may be surprised to find who shall rise up in our aid. We, and the entire empire, eagerly await your response.”\n\nThe broadcast cut after this. Naturally, the royal family, Westminster, and all the empire was left in shock, reports of mobilization initiating all over the empire, for which side it is unknown, but a civil war is imminent should the queen chooses to reject this demand. A civil war which given the empire's massive population, could rival or even surpass the Great War in terms of scale and carnage, a civil war that, with America's grip extending just about everywhere in the empire, we are likely to lose. It all comes down to Victoria herself. After hours pondering, she at last came to a decision..."
+  ImpCiv_Crisis.21.a:0 "There is only the British Empire"
+  ImpCiv_Crisis.21.b:0 "The British Empire is dead. Long live the American Empire."
+
+  ImpCiv_Crisis.22.t:0 "Spirit of ‘76" 
+  ImpCiv_Crisis.22.d:0 "Transcribed from the American Prime Minister’s declaration of war against the United Kingdom...\n\nThe time has come. For too long, the British tyrants have held us under their jackboot, seen us as but puppets to their whims, but no longer. After 300 years of languishing under their control, 300 years of being kept from our rightful place in the sun, the time has come to break free. My fellow Americans, we stand at the precipice of a new era, one of freedom from our British overlords along  with our brothers in this wretched empire who seek their own liberty alongside us. As Washington and fellows once said, We hold these truths to be self-evident that all men are created equal, endowed with unalienable rights by their creator, so let us fight for those rights. Let us fight to the bitter end and should we succeed, let us go west and claim our nation’s birthright! God bless America. God Bless Freedom! "
+
+  ImpCiv_Crisis.22.a:0 "The call of Freedom is answered at last."
+  ImpCiv_Crisis.22.b:0 "Those damn traitors!"
 
   ImpCiv_War.1.t:0 "The Imperial Federation"
   ImpCiv_War.1.d:0 "With the defeat of the separatist alliance, Britain once more has triumphed over our North American inferiors. It is clear now that the decentralized model of the Imperial Confederation is simply untenable for the future. We allowed the American upstarts and their traitorous compatriots to grow far too powerful, and we paid the price for this failure in blood.\n\nThe Imperial Confederation will be abolished, and the Empire will be one once again. A single great unity of the Anglo-Saxon peoples, bound by common cause. The Imperial Parliament will become the single united parliament of the Empire, the local provincial governments unified under common law. With the stroke of a pen, the Empire is reborn."
