--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -477,7 +477,7 @@
   ENG_Impending_Imperial_Civil_War_The_End_Is_Near:0 "Imperial Civil War"
   ENG_Impending_Imperial_Civil_War_The_End_Is_Near_desc:0 "Allea Jacta Est"
 
-  AME_Allies_Notification_tt:0 "§BAll our aligned allies§! will receive notifications to join our §Bcommon cause§!"
+  AME_Allies_Notification_tt:0 "§BAll our aligned allies§! will receive notifications to join our §Bcommon cause§!\n§Y(The chance of their acceptence is not absolute.)§!\n\ns"
 
   ENG_Allies_Warning_Notification_tt:0 "§BAmerican aligned dominions§! will very likely join the §RAmerican Side§!"
 
