--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -416,6 +416,9 @@ PB_AME_Quebec_Bailout_Money:0 "American Sponsored Bailout"
 
 PB_AME_Quebec_Bailout_Debt:0 "Bailout Investments"
 
+PB_AME_War_for_Independence:0 "Second War for Liberty"
+PB_AME_War_for_Independence_desc:0 "Just like in 1776 we once again fight for our independence!"
+
 ##########################
 # TRAITS
 ##########################
