--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -83,9 +83,6 @@
   FE_DIFFICULTY_VERY_HARD: "ELLISON"
   FE_DIFFICULTY_VERY_HARD_TOOLTIP: "§R\"HATE. LET ME TELL YOU HOW MUCH I'VE COME TO HATE YOU SINCE I BEGAN TO LIVE.\"§!"
 
-  POLL: "Next Pax Patch/Update Poll - Community Input"
-  DISCORD: "Pax Britannica Discord"
-
   ##########################
   # TRAITS
   ##########################
@@ -106,3 +103,18 @@
   ##########################
   foreign_civilian_oversight: "Autonomous Administration"
   secret_police_oversight: "Aggressive Surveillance"
+
+  ##########################
+  # MAIN MENU
+  ##########################
+  FE_SINGLE_PLAYER: "Play Alone"
+  FE_MULTI_PLAYER: "Play with Friends"
+
+  FE_PB_VERSION: "Patch - 1.3"
+  FE_PB_NEW_CONTENT: "New Content:\n - Russian Focus Tree\n - Prussian Focus Tree\n - Franco-Russian War\n - Map Changes\n - DLC  compatibility\n - AI Improvements\n - American Focus Tree Improvements\n - China Overhaul\n - Doctrines Rework"
+  FE_PB_NEXT_UPDATE: "The Next Update (Balkans) will feature content for Greece, a peace deal rework (KR Style) and general map overhaul"
+
+  POLL: "Next Pax Patch/Update Poll - Community Input"
+  DISCORD: "Pax Britannica Discord"
+
+  nudger_tt: "§R\"All hope abandon, ye who enter here.\"§!\n §Y- Dante Alighieri, The Divine Comedy§!"
