--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -109,6 +109,7 @@
   ##########################
   FE_SINGLE_PLAYER: "Play Alone"
   FE_MULTI_PLAYER: "Play with Friends"
+  FE_SELECT_SCENARIO: "SELECT A REGION"
 
   FE_PB_VERSION: "Patch - 1.3"
   FE_PB_NEW_CONTENT: "New Content:\n - Russian Focus Tree\n - Prussian Focus Tree\n - Franco-Russian War\n - Map Changes\n - DLC  compatibility\n - AI Improvements\n - American Focus Tree Improvements\n - China Overhaul\n - Doctrines Rework"
