even more tweaks and updates

--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -119,3 +119,17 @@
   DISCORD: "Pax Britannica Discord"
 
   nudger_tt: "§R\"All hope abandon, ye who enter here.\"§!\n §Y- Dante Alighieri, The Divine Comedy§!"
+  #MtG
+  DLC_DESCRIPTION_dlc023: "Included features:\n - §YShip Designer§!\n - Amphibious Landing Vehicles\n - Naval Mines\n - Shipping Route Controls\n - Governments in Exile\n - Admiral Traits and Skills"
+ #LaR
+  DLC_DESCRIPTION_dlc028: "Included features:\n - §YIntelligence Agencies§!\n - Scout Planes and Armoured Cars"
+ #BfB
+  DLC_DESCRIPTION_dlc031: "This is a §GContent Pack§! that don't include new features"
+ #NSB
+  DLC_DESCRIPTION_dlc034: "Included features:\n - §YLandship Designer§!\n - §YOfficer Corps§!\n - Army, Navy and Air Force Spirits\n - Floating Harbors\n - Scorched Earth Tactics\n - Railway Guns"
+ #BBA
+  DLC_DESCRIPTION_dlc036: "Included features:\n - §YAircraft Designer§!\n - Unit Medals\n - Embargo\n - New Peace Deal Options"
+ #AAT
+  DLC_DESCRIPTION_dlc038: "Included features:\n - §YMilitary Industrial Organisations§!\n - International Market\n - Special Force Doctrines"
+ #ToA
+  DLC_DESCRIPTION_dlc040: "This is a §GContent Pack§! that don't include new features"
