WIP Commonality Stuff

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1497,13 +1497,26 @@
   PB_RUS_Commonality_Center_Alaska:0 "Activate the Novo-Arkhangelsk Relay Tower"
   PB_RUS_Commonality_Center_Alaska_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
 
+  PB_RUS_Distribute_Implants_Petersburg:0 "Distribute Implants in Saint Petersburg"
+  PB_RUS_Distribute_Implants_Moscow:0 "Distribute Implants in Moscow"
+  PB_RUS_Distribute_Implants_Kiev:0 "Distribute Implants in Kiev"
+  PB_RUS_Distribute_Implants_Tsaritsyn:0 "Distribute Implants in Tsaritsyn"
+  PB_RUS_Distribute_Implants_Yekaterinburg:0 "Distribute Implants in Yekateringburg"
+  PB_RUS_Distribute_Implants_Novonikolayevsk:0 "Distribute Implants in Novonikolayevsk"
+  PB_RUS_Distribute_Implants_Irkutsk:0 "Distribute Implants in Irkutsk"
+  PB_RUS_Distribute_Implants_Vladivostok:0 "Distribute Implants in Vladivostok"
+
   PB_RUS_Commonality_Advance_Phase_2:0 "Advance to Phase 2"
+  PB_RUS_Commonality_Activation:0 "Begin the Commonality Activation Sequence"
   RUS_Commonality_Centers_Complete_tt:0 "All §5Commonality Relay Towers§! are constructed and §Gactive§!"
+  RUS_Commonality_Implants_Complete_tt:0 "All §5Commonality Implant Distribution Centers§! are §Gactive§!"
 
   RUS_Commonality_Center_Tip_tt:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
   RUS_Commonality_Center_under_Construction_tt:0 "A §5Commonality Relay Tower§! is §rNOT§! currently §Yactivating.§!"
   RUS_Commonality_Center_begin_Construction_tt:0 "A §5Commonality Relay Tower§! will §Gbegin§! activation in this state."
   RUS_Commonality_Center_Construction_complete_tt:0 "A §5Commonality Relay Tower§! will §Gcomplete§! activation in this state."
+
+  PB_RUS_Luddite_Rebels:0 "Luddite Rebel Attack"
 
   ##########################
   # BALANCE OF POWER
