Localisation for Angloi Crisis

--- a/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_United_Commonwealth_l_english.yml
@@ -52,7 +52,7 @@ AME_Midwest_Industry_Controls_Info:0 "§YAnglois States owned by the United Comm
 
 Automats_crisis_flag_tt:0 "§RThe Automat Crisis has hit the United Commonwealth§!\n"
 
-AME_Start_Imperial_War_Dominance_tt:0 "§RThe Confederation needs a new leader. Britain has become too weak and corrupt to manage this system and rule the world. The Monarchy needs a new home a new beginning...\n\nBritain will either accept the ultimatum or submit by force. America will rise and lead this world!§!"
+AME_Start_Imperial_War_Dominance_tt:0 "§RThe Confederation needs a new leader. Britain has become too weak and corrupt to manage this system and rule the world. The Monarchy needs a new home a new beginning...\n\nBritain will either accept the ultimatum or submit by force. America will rise and lead this world!§!\n\n§YOnly Imperial Subjects which are §Rbound§! to us will be “willing” to join our cause.§!"
 
 AME_War_of_Liberty_will_begin_tt:0 "§BThe War for Freedom finally begins. The time to leave the British World has come!\n\nAll other Imperial Subject in our sphere will join us on the path to liberty!§!"
 
@@ -1137,7 +1137,7 @@ PB_AME_American_Orbit_Program_desc:0 "The United Commonwealth has set its sights
 PB_AME_Mech_Research:0 "Bureau of Automat Research"
 PB_AME_Mech_Research_desc:0 "Automats must be built to be highly versatile, able to traverse a variety of terrains and environments with ease. They will be need to be able to operate on land, in various theaters and environments. To expand our Automat research, the Bureau of Automat Research will be created to innovate on American mechanized designs."
 PB_AME_Industry_Research:0 "Expand Military Industries"
-PB_AME_Industry_Research_desc:0 ""
+PB_AME_Industry_Research_desc:0 "What this nation needs right now is rapid rearmament. One can see the writing on the wall. War is coming and its coming fast."
 PB_AME_Improved_Synthetic_Fabricators:0 "Improved Synthetic Metallurgy"
 PB_AME_Improved_Synthetic_Fabricators_desc:0 "Researchers in the Commonwealth are working on developing new methods of synthesizing these materials, including using advanced printing techniques and industrial processes. The resulting materials are expected to have a wide range of potential applications, from building stronger and lighter vehicles and structures, to creating more efficient and durable electronic devices. The development of synthetic metal materials is also expected to have significant implications for the defense industry, with the potential to create armor and weapons that are stronger and more effective than anything currently available."
 PB_AME_Expand_Midwest_Industry:0 "Expand Industry in the Midwest"
