--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -208,7 +208,7 @@
   ImpCiv_Crisis.15.a:0 "War is nearly upon us."
 
   ImpCiv_Crisis.151.t:0 "Our Patience Is Running Out"
-  ImpCiv_Crisis.151.d:0 "."
+  ImpCiv_Crisis.151.d:0 "We have waited for things to change. London and Philadelphia have both made promises to the American people. Talk of an equal and fairer partnership, a joint military and an increased say in how the empire is run. At first it gave us hope that everything would improve. At last we could earn our place right by the side of Britain in this Confederation. A voice to represent their Imperial subjects. That we just had to be patient. But now we see that for all it truly is.\n\nEmpty promises.\n\nEven the Americans who have achieved some position of power are ignored. In favour of those from London. Our loyalty has been rewarded with nothing. Dissent and doubt are whispered in the halls of government. In the streets, protests grow, English owned stores are attacked and there are even cases of soldiers off duty being murdered in their sleep. For the first time in nearly 150 years, there is talk of one word that was previously only discussed in history books as a failed experiment.\n\nIndependence."
   ImpCiv_Crisis.151.a:0 "Why are we even in all of this anymore?."
 
   ImpCiv_Crisis.152.t:0 "Negotiations with Britain Break Down"
@@ -578,12 +578,12 @@
   Anglois_Crisis.4.a:0 "A Confederation of Imperfection"
 
   Anglois_Crisis.5.t:0 "UC demands the Transfer of Cavelier"
-  Anglois_Crisis.5.d:0 ""
+  Anglois_Crisis.5.d:0 "Philadelphia has made their stance clear. They desire the region of Cavelier.\n\nThe recent protests of the Anglois People across Quebecs Midwestern Provinces have startled the entire region. Quebec is unable to stop the rioting and pacify the region. Several lawmakers already feel like that Quebec does not have the ability to projec their own power in this region anymore in the future.\n\nFurthermroe The Government in Philadelphia has their own plans. The Amnerican People across the Commonwealth greatly identify with the predicament of the Anglois People. Many of them see them as their own people and demand that they do not belong with the French Quebecois.\n\nNow Philadelphia is pressuring us that we accept their proposal to transfer ownershop of the region of Cavelier to them. Doing this will ease relations with America and might end the tension. But our America will grow even stronger... and who knows if they stop at Cavelier..."
   Anglois_Crisis.5.a:0 "Concessions must be made"
   Anglois_Crisis.5.b:0 "The border will not change"
 
   Anglois_Crisis.6.t:0 "London transfers Cavelier to us"
-  Anglois_Crisis.6.d:0 ""
+  Anglois_Crisis.6.d:0 "The British have accepted the reality on the ground and promise to transfer the region of Cavelier to us after the tension in the region has quieted down and Quebec relents."
   Anglois_Crisis.6.a:0 "The first big step"
 
   Anglois_Crisis.7.t:0 "London rejects our demands for Cavelier"
@@ -596,11 +596,11 @@
   Anglois_Crisis.8.b:0 "This is going to far."
 
   Anglois_Crisis.9.t:0 "London transfers Wisconsin to us"
-  Anglois_Crisis.9.d:0 ""
+  Anglois_Crisis.9.d:0 "The British have accepted the reality on the ground and promise to transfer the region of Wisconsin to us after the tension in the region has quieted down and Quebec relents."
   Anglois_Crisis.9.a:0 "The frontier is ours again"
 
   Anglois_Crisis.10.t:0 "London rejects our demands for Wisconsin"
-  Anglois_Crisis.10.d:0 ""
+  Anglois_Crisis.10.d:0 "London has rejected to give us the region of Michigan. We were not able to convince them of the necessity to do so. We must try again. The area of Wisconsin will greatly aid us in increasing our presence across the Wild West and project our authority."
   Anglois_Crisis.10.a:0 "What do they care for Wisconsin?"
 
   Anglois_Crisis.11.t:0 "UC demands the Transfer of Michigan"
@@ -609,11 +609,11 @@
   Anglois_Crisis.11.b:0 "Quebec would never recover"
 
   Anglois_Crisis.12.t:0 "London transfers Michigan to us"
-  Anglois_Crisis.12.d:0 ""
+  Anglois_Crisis.12.d:0 "The British have accepted the reality on the ground and promise to transfer the region of Michigan to us after the tension in the region has quieted down and Quebec relents."
   Anglois_Crisis.12.a:0 "The Great Lakes are ours again"
 
   Anglois_Crisis.13.t:0 "London rejects our demands for Michigan"
-  Anglois_Crisis.13.d:0 ""
+  Anglois_Crisis.13.d:0 "London has rejected to give us the region of Michigan. We were not able to convince them of the necessity to do so. It is imperative that we suceed in securing this state as owning it will allow us to fully control the Great Lakes."
   Anglois_Crisis.13.a:0 "The air is getting hot"
 
   Anglois_Crisis.15.t:0 "UC demands the Transfer of Huron"
@@ -622,24 +622,24 @@
   Anglois_Crisis.15.b:0 "This is just bullying now!"
 
   Anglois_Crisis.16.t:0 "London transfers Huron to us"
-  Anglois_Crisis.16.d:0 ""
+  Anglois_Crisis.16.d:0 "The British have accepted the reality on the ground and promise to transfer the region of Huron to us after the tension in the region has quieted down and Quebec relents."
   Anglois_Crisis.16.a:0 "The Great Lakes are ours again"
 
   Anglois_Crisis.17.t:0 "London rejects our demands for Huron"
-  Anglois_Crisis.17.d:0 ""
+  Anglois_Crisis.17.d:0 "London has rejected to give us the region of Huron. We were not able to convince them of the necessity to do so. However it is very unlikely that they would accept this offer considering that this region is very split with Angloi and Quebecois people. The Quebecois also consider this territory to be part of their core mainland."
   Anglois_Crisis.17.a:0 "Should we try again?"
 
   Anglois_Crisis.18.t:0 "UC demands the Transfer of Superieur"
-  Anglois_Crisis.18.d:0 ""
+  Anglois_Crisis.18.d:0 "With the guarentee of gaining Wisconsin after the Crisis Philadelphia is now also trying to get all of the penisula. During the negotiations about Wisconsin it was generally agreed that the region of Superieur would not be included in this deal. Superieur is more then 90% Quebecois and loyal to the government in Quebec. The tension have not spread to this region.\n\nDespite this the UC has made shameful inquiries about the future of the region. They continue to babble about security concerns and other nonsensical reasons.\n\nSeveral lawmakers are already at their wits ends with America and say to simply ignore these stupid proposals..... though it would look better on the map..."
   Anglois_Crisis.18.a:0 "Who cares for Quebec anymore?"
-  Anglois_Crisis.18.b:0 "Are they insane?"
+  Anglois_Crisis.18.b:0 "They minds have been lost to greed..."
 
   Anglois_Crisis.19.t:0 "London transfers Superieur to us"
-  Anglois_Crisis.19.d:0 ""
+  Anglois_Crisis.19.d:0 "The British have accepted the reality on the ground and promise to transfer the region of Superieur to us after the tension in the region has quieted down and Quebec relents. It seems like the British want a good looking border aswell."
   Anglois_Crisis.19.a:0 "Most suprising!"
 
-  Anglois_Crisis.20.t:0 "London rejects our demands for Huron"
-  Anglois_Crisis.20.d:0 ""
+  Anglois_Crisis.20.t:0 "London rejects our demands for Superieur"
+  Anglois_Crisis.20.d:0 "London has rejected to give us the region of Superieur. We were not able to convince them of the necessity to do so. However it wa very unlikely that they would accept this offer at all anyway considering that very few Anglois People lived there."
   Anglois_Crisis.20.a:0 "It was worth a try"
 
   Anglois_Crisis.21.t:0 "THE ANGLOIS ARE LEFT TO ROT..."
@@ -666,6 +666,18 @@
   Anglois_Crisis.26.d:0 "Today we are witness to one of the biggest diplomatic defeats we have suffered to our own colonies. Despite the best efforts of our diplomats and politicians, the situation in Southern Québec has proven itself to be completely untenable. Our control over the area hung by a thread, with the American Commonwealth making the situation turn to their favour. As much as it pains us to do so...we have no voice but to submit to their demands. All of the territory they desire will be handed over to them. The crisis is over at least. We must do our best to win the next one."
   Anglois_Crisis.26.a:0 "Was this the right call?"
 
+  Anglois_Crisis.44.t:0 "America offers Free Equipment"
+  Anglois_Crisis.44.d:0 "Philadelphia offers us a large military package in exchange for us promising them to grant more concessions in the ongoing crisis in the Angloi Provinces. The package is quite massive and there are no direct obligations we have to fullfill for this deal."
+  Anglois_Crisis.44.a:0 "Deal is a deal"
+  Anglois_Crisis.44.b:0 "We will not accept such a cheap deal"
+
+  Anglois_Crisis.45.t:0 "Britain accepts the Equipment Deal"
+  Anglois_Crisis.45.d:0 ""
+  Anglois_Crisis.45.a:0 "One deal at a time"
+
+  Anglois_Crisis.46.t:0 "Britain rejects the Equipment Deal"
+  Anglois_Crisis.46.d:0 ""
+  Anglois_Crisis.46.a:0 "Damnit"
 
 
 
