--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1423,6 +1423,8 @@
 
   RUS_Operation_Azalea_Mission:0 "Operation Azalea"
   PB_Okhrana_Impending_National_Awakening:0 "Impending Second National Awakening"
+  PB_Okhrana_Impending_National_Awakening_desc:0 "$RUS_SNA_preludium_tt$"
+  RUS_SNA_preludium_tt: "Size and Strenght of the §YSecond National Awakening§! depends on §RResistance Power§!. Reduce it while you still have time!"
 
   PB_RUS_Alaskan_Prospecting:0 "Alaskan Fortunes"
   PB_RUS_Alaskan_Prospecting_desc:0 "Alaska was, to many, a vast and empty wilderness, no different from Siberia across the Bering Strait, and for the longest time, that is how the Russian government viewed their American holdings.\n\nThis suddenly changed in 1871 with the discovery of gold in New Moscow, which brought thousands of Russian settlers east to Alaska, hoping to strike it rich. This caused the Russian government to begin to invest in the region, albeit half-heartedly as a result of the vast distance between the heartland of Russia and their colony. Such a distance convinced the government in Saint Petersburg to leave Alaska to control itself while Russia focused elsewhere, and in 1880, the "Russian America Reorganization Act" was enacted, reorganizing Alaska into the "United Colonies of Russian America", officializing its autonomy within the Russian Empire.\n\nThis has been the status quo until recently, when in 1927, the Vilkitsky Oil Basin, one of the largest such basins in North America, was discovered in the North Slope. The Alaskan economy skyrocketed as local companies and megacorporations began scrambling northwards in order to set up infrastructure to access the oil. However, the amount of oil that has been extracted from the basin has not been meaningful enough to allow the state of affairs to continue. As such, the Russian government has finally decided to place its stake in the Alaskan oil industry and has authorized the construction of a great singular pipeline, the Trans-American Pipeline, in order to begin effectively extracting the oil out of the remote basin and to the coast for usage within Russia proper.\n\nConditions are incredibly difficult due to Alaska's general nature, but that will not stop us from finishing our work and finally being able to completely tap into the great and vast wealth within Alaska's core and exploit its potential to the fullest.\n\nProgress of the §YTrans-American Pipeline§! - [?RUS.PB_RUS_Trans_Alaskan_Pipeline_var|%G]"
@@ -1540,8 +1542,8 @@
   RUS_Lysenkoist_Side_total_control_range:0 "Lysenkoist Theory Dominant"
 
   RUS_Teslaist_Side_low_control_range:0 "Limited Tesla School Influence"
-  RUS_Teslaist_Side_medium_control_range:0 "Significant esla School Influence"
-  RUS_Teslaist_Side_high_control_range:0 "Pervasive esla School Influence"
+  RUS_Teslaist_Side_medium_control_range:0 "Significant Tesla School Influence"
+  RUS_Teslaist_Side_high_control_range:0 "Pervasive Tesla School Influence"
   RUS_Teslaist_Side_control_range:0 "Tesla School Theory Dominant"
 
   RUS_balance_of_power_category:0 "The War of the Sciences"
