--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -26,6 +26,12 @@ WAR_NAME_HUN_SLO:0 "The Slovak Rebellion"
 WAR_NAME_CHI_ROC:0 "The Chinese Revolution"
 WAR_NAME_ROC_CHI:0 "The Chinese Revolution"
 
+WAR_NAME_CHI_MAN:0 "Reclamation of Manchuria"
+WAR_NAME_ROC_MAN:0 "Reclamation of Manchuria"
+
+WAR_NAME_SGH_ROC:0 "Restoration of Peace in China"
+WAR_NAME_SGH_CHI:0 "Restoration of Peace in China"
+
 WAR_NAME_RUS_MAN:0 "The Manchuria Campaign"
 WAR_NAME_MAN_RUS:0 "The Manchuria Campaign"
 
@@ -111,3 +117,8 @@ WAR_NAME_RUS_ASK:0 "The Alaskan War of Independence"
 
 WAR_NAME_FRA_RUS:0 "Franco-Russian War"
 WAR_NAME_RUS_FRA:0 "Franco-Russian War"
+
+WAR_NAME_JAP_RUS:0 "Second Russo-Japanese War"
+WAR_NAME_RUS_JAP:0 "Second Russo-Japanese War"
+
+WAR_NAME_JAP_MAN:0 "Japanese Invasion of Manchuria"
