--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -12,6 +12,7 @@
  automat_research:0 "Automats"
  cat_bioaugmented_unit_research:0 "Biomodified Units"
  cybers_tech_research:0 "Cybernetics Tech"
+ cat_rations_tech: "Field Rations"
  
  infantry_equipment_1933:0 "Interwar Infantry Equipment"
  infantry_equipment_1933_short:0 "Interwar Eq."
