culture map mode targeting
tysm regex :KitaClap:

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -13,10 +13,6 @@ PB_Culture_Civ_Cost8: "Converting/Accepting a Culture"
 PB_Culture_Civ_Cost9: "Converting/Accepting a Culture"
 PB_Culture_Civ_Cost10: "Converting/Accepting a Culture"
 
-## -------- Map Mode -------- ##
-
-culture_map_mode_tooltip: "The majority culture of this state is §Y[?FROM.culture_token.GetTokenLocalizedKey]§!"
-
 ## -------- Culture Conversion Ideas -------- ##
 
 PB_CULTURE_ACCEPT_NINE_TT: "Culture Accept Rate: §Y+9%.§!"
@@ -53,6 +49,8 @@ Culture_Conversion: "Culture Conversion/Acceptance"
 ## -------- Culture Map Mode -------- ##
 
 culture_map_mode: "Culture Map"
+culture_map_mode_tooltip: "The majority culture of this state is §Y[?FROM.culture_token.GetTokenLocalizedKey]§!"
+culture_map_mode_tooltip_delayed: ""
 
 ## -------- Scripted Effect Tooltips -------- ##
 PB_Cultures_change_culture_of_state_tt: "Convert the culture of §Y[THIS.GetName]§! from §Y[?culture_token.GetTokenLocalizedKey]§! to §Y[?temp_culture.GetTokenLocalizedKey]§!."
